MINOR: tweaked bar to be a bit taller and less cramped. Fixed bg image to allow scaling

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -2,8 +2,11 @@
 .ss-globaltoolbar {
 	width: 100%;
 	height: 30px;
-	background: #C2D7D1 url(../images/bar-bg.gif) bottom left repeat-x;
-	padding: 10px 0 6px 0;
+	-moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    background: url("../images/bar-bg.gif") repeat-x scroll left top #dae5e1;
+    border-bottom: 1px solid #EFF7F4;
+	padding: 14px 0 4px;
 }
 	.ss-globaltoolbar * { 
 		font: 12px/18px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -44,13 +47,16 @@
 			padding: 3px 12px 5px 0;
 		}
 		.ss-globaltoolbar ul li a:hover,
-		.ss-globaltoolbar ul li.current a {
+		.ss-globaltoolbar ul li.current a,
+		.ss-globaltoolbar ul li a:focus {
 			color: #51635E;
 			text-decoration: none;
+			outline: none;
 			background: url(../images/menu-lft.gif) top left no-repeat;
 		}
 			.ss-globaltoolbar ul li a:hover span,
-			.ss-globaltoolbar ul li.current a span {
+			.ss-globaltoolbar ul li.current a span,
+			.ss-globaltoolbar ul li a:focus span {
 				background: url(../images/menu-rht.gif) top right no-repeat;
 			}
 	
